Revert "Fix overflow issue"
This reverts commit d40c34865d18f28806b576c79a8566756a6a90a6.

--- a/src/Container/EventGallery.css
+++ b/src/Container/EventGallery.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -16,7 +17,9 @@
   flex-direction: column;
   height: 1200px;
   align-items: center;
-  overflow:scroll
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
+  justify-content: center;
 }
 
 .search-box-container {
